[gd_scene load_steps=5 format=3 uid="uid://cb2rwntd2s065"]

[ext_resource type="Script" path="res://scripts/weapon_manager.gd" id="1_1tytp"]
[ext_resource type="PackedScene" uid="uid://lyyc6u3slkca" path="res://scenes/weapons/pistol.tscn" id="1_qsn5i"]
[ext_resource type="PackedScene" uid="uid://sjytiuvopdi3" path="res://scenes/weapons/shotgun.tscn" id="2_frp63"]
[ext_resource type="PackedScene" uid="uid://j0p8llsbpo0o" path="res://scenes/weapons/chaingun.tscn" id="4_5okys"]

[node name="WeaponManager" type="Node3D"]
script = ExtResource("1_1tytp")

[node name="RightPosition" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, -0.2, -0.2)

[node name="pistol" parent="RightPosition" instance=ExtResource("1_qsn5i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00488067, -0.00371122, 0.000459611)

[node name="shotgun" parent="RightPosition" instance=ExtResource("2_frp63")]

[node name="CenterPosition" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.325, 0)

[node name="Chaingun" parent="CenterPosition" instance=ExtResource("4_5okys")]

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]

[node name="CooldownTimer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
